[gd_scene load_steps=5 format=3 uid="uid://c4qs321pymfg5"]

[ext_resource type="Texture2D" uid="uid://c8he6au8slgko" path="res://resources/images/tutorial/tuto_1.png" id="1_0oybm"]
[ext_resource type="Script" uid="uid://dw46ac7uwgq2b" path="res://scripts/world_tuto.gd" id="1_2ih4g"]
[ext_resource type="Texture2D" uid="uid://v5g1skhnlqph" path="res://resources/images/tutorial/tuto_2.png" id="2_2ih4g"]
[ext_resource type="Texture2D" uid="uid://cs210cw1d7q57" path="res://resources/images/tutorial/tuto_3.png" id="3_t5b34"]

[node name="WorldTuto" type="CanvasLayer"]
script = ExtResource("1_2ih4g")

[node name="Label" type="Label" parent="."]
offset_left = 789.0
offset_top = 498.0
offset_right = 908.0
offset_bottom = 521.0
text = "azy faut cliquer"

[node name="TextureRect1" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_0oybm")
expand_mode = 3

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 290.0
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2ih4g")
expand_mode = 3

[node name="TextureRect3" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 795.0
offset_top = 118.0
offset_right = 1.38708
offset_bottom = -436.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_t5b34")
expand_mode = 3
stretch_mode = 4
